plugins {
    id("com.android.library")
    id("org.jetbrains.kotlin.android")
}

android {
    compileSdk project.compileSDK.toInteger()

    defaultConfig {
        minSdk project.minSDK.toInteger()
        targetSdk project.targetSDK.toInteger()
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt')
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    lint {
        abortOnError true
        disable 'MissingPermission', 'LongLogTag', 'DefaultLocale', 'UnusedResources', 'GradleDependency', 'GradleOverrides', 'OldTargetApi'
    }
    namespace 'com.microsoft.xboxtcui'
}

dependencies {
    implementation(libs.androidx.appcompat)
    implementation(libs.material)
    implementation("androidx.fragment:fragment-ktx:1.8.3")

    implementation(libs.firebase.messaging)
    implementation(libs.firebase.iid)

    implementation(libs.pkix)

    implementation(libs.gson)
    implementation(libs.httpclient)
    implementation(libs.simple.xml)
}
